--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -1,12 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    
+    <!-- JQuery and JQuery UI -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.2/themes/smoothness/jquery-ui.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
+
+    <!-- Chartjs -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+
+    <title>{% block title %}temp{% endblock %}</title>
 </head>
+
 <body>
-    <h1>WORKING!</h1>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <svg width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'><rect width='24' height='24' stroke='none' fill='#000000' opacity='0'/>
+
+
+        <g transform="matrix(1.43 0 0 1.43 12 12)" >
+        <g style="" >
+        <g transform="matrix(1 0 0 1 -0.01 -3.08)" >
+        <line style="stroke: rgb(0,0,0); stroke-width: 1; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;" x1="-5.75" y1="2.615" x2="5.75" y2="-2.615" />
+        </g>
+        <g transform="matrix(1 0 0 1 4.67 -5.02)" >
+        <polyline style="stroke: rgb(0,0,0); stroke-width: 1; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;" points="-1.07,-1.48 1.08,-0.67 0.28,1.48 " />
+        </g>
+        <g transform="matrix(-1 0 0 -1 5 2.76)" >
+        <path style="stroke: rgb(0,0,0); stroke-width: 1; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;" transform=" translate(-12, -9.75)" d="M 10.75 6 L 13.25 6 L 13.25 13 C 13.25 13.276142374915397 13.026142374915397 13.5 12.75 13.5 L 11.25 13.5 C 10.973857625084603 13.5 10.75 13.276142374915397 10.75 13 L 10.75 6 Z" stroke-linecap="round" />
+        </g>
+        <g transform="matrix(-1 0 0 -1 0 3.51)" >
+        <path style="stroke: rgb(0,0,0); stroke-width: 1; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;" transform=" translate(-7, -10.5)" d="M 5.75 7.5 L 8.25 7.5 L 8.25 13 C 8.25 13.276142374915397 8.026142374915397 13.5 7.75 13.5 L 6.25 13.5 C 5.973857625084603 13.5 5.75 13.276142374915397 5.75 13 L 5.75 7.5 Z" stroke-linecap="round" />
+        </g>
+        <g transform="matrix(-1 0 0 -1 -5 4.26)" >
+        <path style="stroke: rgb(0,0,0); stroke-width: 1; stroke-dasharray: none; stroke-linecap: round; stroke-dashoffset: 0; stroke-linejoin: round; stroke-miterlimit: 4; fill: none; fill-rule: nonzero; opacity: 1;" transform=" translate(-2, -11.25)" d="M 0.75 9 L 3.25 9 L 3.25 13 C 3.25 13.276142374915397 3.0261423749153966 13.5 2.75 13.5 L 1.25 13.5 C 0.9738576250846034 13.5 0.75 13.276142374915397 0.75 13 L 0.75 9 Z" stroke-linecap="round" />
+        </g>
+        </g>
+        </g>
+        </svg>
+      <a class="navbar-brand" href="#">Flipr</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/nsebse/">NSE and BSE</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/companies/">Companies</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+
+    <div id="content">
+        {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
