--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -16,6 +16,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 
     <title>{% block title %}temp{% endblock %}</title>
+    {% block style %}<style></style>{% endblock %}
 </head>
 
 <body>
@@ -58,7 +59,7 @@
             </li>
           </ul>
           {% if user.is_authenticated %}
-            <a href="#" class="pe-3">{{user}}</a>
+            <a href="/profile" class="pe-3">{{user}}</a>
             <form action="/api/logout/" method="post">
               {%csrf_token%}
               <button type="submit" class="btn btn-outline-danger btn-rounded text-light">Logout</button>
