--- a/frontend/templates/companies.html
+++ b/frontend/templates/companies.html
@@ -2,6 +2,348 @@
 {% load extractor %}
 
 {% block title %} Companies {% endblock %}
-    
 {% block content %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+
+
+
+<script>
+    $(document).ready(function(){
+  $('#selection').change(function(){
+    var  x = $('#selection').find(":selected").val();
+    console.log(x)
+    if(x==1){
+        $('#ashokChart').attr("hidden",false)
+        $('#ciplaChart').attr("hidden",true)
+        $('#eicherChart').attr("hidden",true)
+        $('#relianceChart').attr("hidden",true)
+        $('#tataChart').attr("hidden",true)
+    }
+    else if(x==2){
+        $('#ashokChart').attr("hidden",true)
+        $('#ciplaChart').attr("hidden",false)
+        $('#eicherChart').attr("hidden",true)
+        $('#relianceChart').attr("hidden",true)
+        $('#tataChart').attr("hidden",true)
+    }
+
+    else if(x==3){
+        $('#ashokChart').attr("hidden",true)
+        $('#ciplaChart').attr("hidden",true)
+        $('#eicherChart').attr("hidden",false)
+        $('#relianceChart').attr("hidden",true)
+        $('#tataChart').attr("hidden",true)
+    }
+    else if(x==4){
+        $('#ashokChart').attr("hidden",true)
+        $('#ciplaChart').attr("hidden",true)
+        $('#eicherChart').attr("hidden",true)
+        $('#relianceChart').attr("hidden",false)
+        $('#tataChart').attr("hidden",true)
+    }
+    else if(x==5){
+        $('#ashokChart').attr("hidden",true)
+        $('#ciplaChart').attr("hidden",true)
+        $('#eicherChart').attr("hidden",true)
+        $('#relianceChart').attr("hidden",true)
+        $('#tataChart').attr("hidden",false)
+    }
+  }
+  )
+});
+
+</script>
+
+
+<div class="d-flex justify-content-center pt-4">
+  <div class="btn-group">
+    <select class="form-select btn-outline-primary" aria-label="Default select example" id ="selection">
+        <option value="0" selected="selected">Select Company</option>
+        <option value="1" id ="ashok">Ashokley Land</option>
+        <option value="2" id="cipla">Cipla</option>
+        <option value="3" id="eicher">Eicher Motors</option>
+        <option value="4" id="reliance">Reliance</option>
+        <option value="5" id="tata">Tata Steel</option>
+      </select>
+    <button class="btn btn-outline-primary">1m</button>
+    <button class="btn btn-outline-primary">3m</button>
+    <button class="btn btn-outline-primary">5m</button>
+    <button class="btn btn-outline-primary">15m</button>
+    <button class="btn btn-outline-primary">30m</button>
+    <button class="btn btn-outline-primary">1h</button>
+    <button class="btn btn-outline-primary">D</button>
+    <button class="btn btn-outline-primary">W</button>
+    <button class="btn btn-outline-primary"><i class="bi bi-gear"></i></button>
+    <button class="btn btn-outline-primary"><i class="bi bi-arrows-angle-expand"></i></button>
+    <button class="btn btn-outline-primary"><i class="bi bi-camera"></i></button>
+    <button class="btn btn-outline-primary"><i class="bi bi-window-plus"></i></i></button>
+  </div>
+</div>
+
+
+
+
+<div class="container">
+    <canvas id="ashokChart" hidden="true"></canvas>
+    <canvas id="ciplaChart" hidden="true"></canvas>
+    <canvas id="eicherChart"hidden="true"></canvas>
+    <canvas id="relianceChart"hidden="true"></canvas>
+    <canvas id="tataChart"hidden="true"></canvas>
+</div>
+  
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@^3"></script>
+  <script src="https://cdn.jsdelivr.net/npm/luxon@^2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon@^1"></script>
+  <script src="https://unpkg.com/luxon@1.25.0/build/global/luxon.min.js"></script>
+
+  
+
+<!-- ashok -->
+<script>
+    // ashok plot
+    ashok_plot_dataset = []
+        
+        var ashok_oneyr_high_values = JSON.parse('{{ ashok_oneyr_high_values|safe }}');
+        var ashok_oneyr_dates = JSON.parse('{{ ashok_oneyr_dates|safe }}');
+
+        for(var i =0;i<ashok_oneyr_dates.length;i++){
+            ashok_plot_dataset.push({x:ashok_oneyr_dates[i],y:ashok_oneyr_high_values[i]})
+        }
+        console.log(ashok_plot_dataset)
+        const ashok_ctx = document.getElementById('ashokChart');
+    
+         new Chart(ashok_ctx, {
+        type: 'line',
+        data: {
+            // labels: ,
+            datasets: [{
+            data: ashok_plot_dataset,
+            borderColor: "#4BB543",
+            }]
+        },
+        options: {
+            scales: {
+                x:{
+                    bounds: 'ticks',
+                    type:'timeseries',
+                    time:{
+                        unit:'month',
+                        min: new Date('2018-01-15T00:00:00'),
+                        max: new Date('2019-01-17T00:00:00'),
+                    },
+                    ticks: {
+                        source:'data',
+                        min: new Date('2018-01-15T00:00:00'),
+                        max: new Date('2019-01-17T00:00:00'),
+                    }
+                },
+
+                y: {
+                    beginAtZero: true
+                }
+            }
+        }
+        });
+  
+</script>
+
+<!-- cipla -->
+<script>
+
+        cipla_plot_dataset = []
+        
+        var cipla_oneyr_high_values = JSON.parse('{{ cipla_oneyr_high_values|safe }}');
+        var cipla_oneyr_dates = JSON.parse('{{ cipla_oneyr_dates|safe }}');
+
+        for(var i =0;i<cipla_oneyr_dates.length;i++){
+            cipla_plot_dataset.push({x:cipla_oneyr_dates[i],y:cipla_oneyr_high_values[i]})
+        }
+        console.log(cipla_plot_dataset)
+        const cipla_ctx = document.getElementById('ciplaChart');
+    
+         new Chart(cipla_ctx, {
+        type: 'line',
+        data: {
+            // labels: ,
+            datasets: [{
+            data: cipla_plot_dataset,
+            borderColor: "#4BB543",
+            }]
+        },
+        options: {
+            scales: {
+                x:{
+                    bounds: 'ticks',
+                    type:'timeseries',
+                    time:{
+                        unit:'month',
+                        min: new Date('2018-01-15T00:00:00'),
+                        max: new Date('2019-01-17T00:00:00'),
+                    },
+                    ticks: {
+                        source:'data',
+                        min: new Date('2018-01-15T00:00:00'),
+                        max: new Date('2019-01-17T00:00:00'),
+                    }
+                },
+
+                y: {
+                    beginAtZero: true
+                }
+            }
+        }
+        });
+  
+</script>
+       
+<!-- eicher -->
+<script>
+            eicher_plot_dataset = []
+            
+            var eicher_oneyr_high_values = JSON.parse('{{ eicher_oneyr_high_values|safe }}');
+            var eicher_oneyr_dates = JSON.parse('{{ eicher_oneyr_dates|safe }}');
+    
+            for(var i =0;i<eicher_oneyr_dates.length;i++){
+                eicher_plot_dataset.push({x:eicher_oneyr_dates[i],y:eicher_oneyr_high_values[i]})
+            }
+            console.log(eicher_plot_dataset)
+            const eicher_ctx = document.getElementById('eicherChart');
+        
+             new Chart(eicher_ctx, {
+            type: 'line',
+            data: {
+                // labels: ,
+                datasets: [{
+                data: eicher_plot_dataset,
+                borderColor: "#4BB543",
+                }]
+            },
+            options: {
+                scales: {
+                    x:{
+                        bounds: 'ticks',
+                        type:'timeseries',
+                        time:{
+                            unit:'month',
+                            min: new Date('2018-01-15T00:00:00'),
+                            max: new Date('2019-01-17T00:00:00'),
+                        },
+                        ticks: {
+                            source:'data',
+                            min: new Date('2018-01-15T00:00:00'),
+                            max: new Date('2019-01-17T00:00:00'),
+                        }
+                    },
+    
+                    y: {
+                        beginAtZero: true
+                    }
+                }
+            }
+            });
+      
+</script>
+       
+       
+<!-- reliance -->
+<script>
+        // reliance plot
+        reliance_plot_dataset = []
+            
+            var reliance_oneyr_high_values = JSON.parse('{{ reliance_oneyr_high_values|safe }}');
+            var reliance_oneyr_dates = JSON.parse('{{ reliance_oneyr_dates|safe }}');
+    
+            for(var i =0;i<reliance_oneyr_dates.length;i++){
+                reliance_plot_dataset.push({x:reliance_oneyr_dates[i],y:reliance_oneyr_high_values[i]})
+            }
+            console.log(reliance_plot_dataset)
+            const reliance_ctx = document.getElementById('relianceChart');
+        
+             new Chart(reliance_ctx, {
+            type: 'line',
+            data: {
+                // labels: ,
+                datasets: [{
+                data: reliance_plot_dataset,
+                borderColor: "#4BB543",
+                }]
+            },
+            options: {
+                scales: {
+                    x:{
+                        bounds: 'ticks',
+                        type:'timeseries',
+                        time:{
+                            unit:'month',
+                            min: new Date('2018-01-15T00:00:00'),
+                            max: new Date('2019-01-17T00:00:00'),
+                        },
+                        ticks: {
+                            source:'data',
+                            min: new Date('2018-01-15T00:00:00'),
+                            max: new Date('2019-01-17T00:00:00'),
+                        }
+                    },
+    
+                    y: {
+                        beginAtZero: true
+                    }
+                }
+            }
+            });
+      
+</script>
+       
+     <!-- tata -->  
+<script>
+
+            tata_plot_dataset = []
+            
+            var tata_oneyr_high_values = JSON.parse('{{ tata_oneyr_high_values|safe }}');
+            var tata_oneyr_dates = JSON.parse('{{ tata_oneyr_dates|safe }}');
+    
+            for(var i =0;i<tata_oneyr_dates.length;i++){
+                tata_plot_dataset.push({x:tata_oneyr_dates[i],y:tata_oneyr_high_values[i]})
+            }
+            console.log(tata_plot_dataset)
+            const tata_ctx = document.getElementById('tataChart');
+        
+             new Chart(tata_ctx, {
+            type: 'line',
+            data: {
+                // labels: ,
+                datasets: [{
+                data: tata_plot_dataset,
+                borderColor: "#4BB543",
+                }]
+            },
+            options: {
+                scales: {
+                    x:{
+                        bounds: 'ticks',
+                        type:'timeseries',
+                        time:{
+                            unit:'month',
+                            min: new Date('2018-01-15T00:00:00'),
+                            max: new Date('2019-01-17T00:00:00'),
+                        },
+                        ticks: {
+                            source:'data',
+                            min: new Date('2018-01-15T00:00:00'),
+                            max: new Date('2019-01-17T00:00:00'),
+                        }
+                    },
+    
+                    y: {
+                        beginAtZero: true
+                    }
+                }
+            }
+            });
+      
+</script>
+           
+       
+
 {% endblock %}
