--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -1,8 +1,14 @@
 {% extends "base.html" %}
 {% block title %} Home {% endblock %}
 
+{% block style %}
+<style>
+
+</style>
+    
+    
+{% endblock %}
 
 {% block content %}
-
 
 {% endblock %}
