--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -52,7 +52,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/nsebse/">NSE and BSE</a>
+              <a class="nav-link active" aria-current="page" href="/nsebse/">NSE/BSE</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/companies/">Companies</a>
